--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>lav et spil v2</title>
+    <script src="build/app.js" charset="utf-8"></script>
   </head>
   <body>
-    
+
   </body>
 </html>
