added css and alot of things

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>lav et spil v2</title>
     <script src="build/app.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="build/app.css">
   </head>
   <body>
 
